syntax = "proto3";
package cluster;

option go_package = "./cluster";

service Rpc {
  rpc join (stream JoinRequest) returns (stream JoinReply) {};
}

message AgentInfo {
  int64 port = 1;
}

message JoinRequest {
  string node_name = 1;
  AgentInfo agent_info = 2;
}

message JoinReply {
  string uuid = 1;
}